# t2v-eval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  t2v_batch_evaluate.py  t2v_batch_log.py
t2v_eval/: __init__.py
t2v_eval/evaluation/: __init__.py  accessibility.py  chart_type_accuracy.py  contrast_test.py  ddata_similarity.py  metric_utils.py  textspace_test.py
t2v_eval/logging/: __init__.py  replot.py  utils.py
t2v_eval/logging/geopandas_logging/: __init__.py  geopandas_geodataframe_plotting.py
t2v_eval/logging/matplotlib_logging/: __init__.py  matplotlib_3D.py  matplotlib_distribution_data.py  matplotlib_grided_data.py  matplotlib_layout.py  matplotlib_pairwise_data.py
t2v_eval/logging/seaborn_logging/: __init__.py  categorical_distribution_plots.py  categorical_estimate_plots.py  categorical_grid_plots.py  categorical_scatter_plots.py  statistical_relationship_plots.py
tests/t2v_logging/: conftest.py  helpers.py  test_geopandas.py  test_matplotlib_3d.py  test_matplotlib_distribution.py  test_matplotlib_gridded.py  test_matplotlib_pairwise.py  test_pandas_distribution.py  test_pandas_pairwise.py  test_seaborn_axis_grids.py  test_seaborn_categorical.py  test_seaborn_distribution.py  test_seaborn_regression.py  test_seaborn_relational.py
tests/t2v_logging/geopandas/: countries.geojson  plot_world_heatmap.py
tests/t2v_logging/matplotlib/gridded/: plot_contour.py  plot_imshow.py  plot_pcolormesh.py
tests/t2v_logging/matplotlib/pairwise_data/: plot_bar.py  plot_barh.py  plot_fill_between.py  plot_fill_betweenx.py  plot_plot.py  (+4 more)
(+43 files in other folders)
