[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["t2v_eval*"]

[project]
name = "t2v_eval"
version = "0.2.1"
description = "Evalulation scripts for Text-to-Vis projects"
readme = "README.md"
requires-python = ">=3.10, <=3.12.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/SAIPLL/t2v-eval"

[tool.pytest.ini_options]
# Run from the repo root so that both "t2v_eval" and "tests" are importable.
pythonpath = ["."]
testpaths  = ["tests"]